test/tests/MultipleDefaultInheritanceNoDefault.frost
-- without the @default annotations, at one point the methods were bypassing the normal @default
-- method filtering and we ended up creating a Methods object with duplicate signatures, resulting
-- in an assertion failure.
interface Example1 {
    method defaultMethod() {
        Console.printLine("this method has an implementation!")
    }
}

interface Example2 {
    method defaultMethod() {
        Console.printLine("this method also has an implementation!")
    }
}

class Foo : Example2, Example1 {
}

method main() {
    Foo().defaultMethod()
}